--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,13 +6,9 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-yandex:
-  service: S3
-  access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
-  region: ru-central1
-  bucket: <%= ENV['S3_BUCKET'] %>
-  endpoint: 'https://storage.yandexcloud.net'
+render:
+  service: Disk
+  root: '/opt/activestorage-data'
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
@@ -28,6 +24,14 @@ yandex:
 #   project: your_project
 #   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
 #   bucket: your_own_bucket-<%= Rails.env %>
+
+# test:
+#   service: Disk
+#   root: <%= Rails.root.join("tmp/storage") %>
+
+# local:
+#   service: Disk
+#   root: <%= Rails.root.join("storage") %>
 
 # Use bin/rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
 # microsoft:
