--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,3 +32,9 @@ Style/AsciiComments:
 
 Style/Documentation:
   Enabled: false
+
+Style/RedundantReturn:
+  Enabled: false
+
+Style/ArgumentsForwarding:
+  Enabled: false
