--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
     - "spec/**"
   NewCops: enable
   TargetRubyVersion: 3.2.2
+  TargetRailsVersion: 7
   SuggestExtensions: false
 
 require:
